--- a/style.css
+++ b/style.css
@@ -51,6 +51,16 @@ body {
 
 }
 
+#titulo-principal {
+    position: absolute;
+    top: 54px;
+    left: 224.5px;
+    font-family: Inter;
+    font-size: 34px;
+    color: var(--dark-blue-300);
+    font-weight: bold;
+}
+
 #language-menu {
     position: absolute;
     height: auto;
@@ -106,25 +116,27 @@ body {
 
 textarea {
     background-color: transparent;
-    position: relative;
-    left: 240px;
-    top: 168px;
-    
-    color: var(--dark-blue-300);
     font-family: Inter;
-    line-height: 1.5;
-    font-size: 32px;
-    
-    width: 675px;
-    height: 600px;
-
     resize: none;
     border: none;
     outline: none;
 }
 
+#input-text {
+    position: relative;
+    left: 240px;
+    top: 128px;
+    
+    color: var(--dark-blue-300);
+    line-height: 1.5;
+    font-size: 30px;
+    
+    width: 675px;
+    height: 740px;
+}
+
 /* Cambiar el color del texto del placeholder en todos los textarea */
-textarea::placeholder {
+#input-text::placeholder {
     color: var(--dark-blue-200); /* Cambia el color del texto del placeholder */
 }
 
@@ -136,6 +148,9 @@ textarea::placeholder {
     font-size: 16px;
     cursor: pointer;
     font-weight: 550;
+    background-color: transparent;
+    border: solid 1px var(--dark-blue-300);
+    color: var(--dark-blue-300);
 }
 
 #div-btns {
@@ -152,12 +167,6 @@ textarea::placeholder {
     background-color: var(--dark-blue-300);
     color: white;
     border: none;
-}
-
-.btn:nth-child(2) {
-    background-color: transparent;
-    border: solid 1px var(--dark-blue-300);
-    color: var(--dark-blue-300);
 }
 
 #div-warning {
@@ -189,7 +198,7 @@ textarea::placeholder {
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);    
 }
 
-#div-result div {
+#no-msg {
     position: absolute; 
     top: 50%;
     left: 50%;
@@ -200,12 +209,12 @@ textarea::placeholder {
     flex-direction: column;
 }
 
-#div-result div img {
+#no-msg img {
     width: 336px;
     margin-bottom: 16px;
 }
 
-#div-result div h2 {
+#no-msg h2 {
     color: var(--gray-500);
     text-align: center;
     font-family: Inter;
@@ -215,7 +224,7 @@ textarea::placeholder {
     line-height: 1.2;
 }
 
-#div-result div p {
+#no-msg p {
     color: var(--gray-400);
     text-align: center;
     font-family: Inter;
@@ -225,3 +234,28 @@ textarea::placeholder {
     line-height: 1.5;
 }
 
+
+#output-text {
+    color: var(--gray-400);
+    line-height: 1.5;
+    font-size: 24px;
+    width: 336px;
+    height: 75vh;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -57%);
+}
+
+#div-result button{
+    position: absolute;
+    left: 50%;
+    top: 87%;
+    transform: translate(-50%, 50%);
+}
+
+#result {
+    height: 100%;
+    background-color: transparent;
+    border-radius: 32px;
+}
