--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ textarea {
     background-color: transparent;
     font-family: Inter;
     resize: none;
-    border: none;
+    /*border: none;*/
     outline: none;
 }
 
@@ -178,6 +178,7 @@ textarea {
     width: 100%;
     gap: 3vw;
     margin-top: 1em;
+
 }
 
 .boton {
@@ -193,7 +194,10 @@ textarea {
     color: var(--dark-blue-300);
 }
 
-
+#boton-encriptar {
+    background-color: var(--dark-blue-300);
+    color: white;
+}
 
 #resultados {
     display: flex;
@@ -204,10 +208,7 @@ textarea {
     background-color: white;
     border-radius: 32px;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-    margin-top: -12.84px;
-
-  
-
+    margin-top: -1.3em;
 }
 
 #resultado {
@@ -217,6 +218,7 @@ textarea {
     border-radius: 32px;
     flex-direction: column;
     align-items: center;
+    margin-top: 1em;
 }
 
 #texto-salida {
@@ -224,7 +226,12 @@ textarea {
     line-height: 1.5;
     font-size: 24px;
     width: 92%;
-    height: 71.108vh;
+    /*height: 71.108vh; /*valor en la laptop*/
+    height: 65.108vh;
+}
+
+#boton-copiar {
+    margin-top: 4.5141vh; /*-43.200*/
 }
 
 #error {
