--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ header h1 {
     position: relative;
     display: flex;
     padding: 1em;
-    max-height: 8em;
+    max-height: 12em;
     flex-direction: column;
     align-items: center;
     gap: 1em;
@@ -238,23 +238,24 @@ textarea {
 }
 
 #error {
-    position: absolute; 
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 336px;
     display: flex;
+    width: 23.33vw;
+    height: 100%;
     gap: 1em;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--dark-blue-300);
+    
+    border: #052051 1px solid;
 }
 
 #error img {
-    width: 336px;
+    width: 23.33vw;
     margin-bottom: 1em;
 }
 
 #error h2 {
-    color: var(--gray-500);
     text-align: center;
     font-family: Inter;
     font-size: 24px;
@@ -264,7 +265,6 @@ textarea {
 }
 
 #error p {
-    color: var(--gray-400);
     text-align: center;
     font-family: Inter;
     font-size: 1em;
