--- a/style.css
+++ b/style.css
@@ -84,6 +84,10 @@ header h1 {
     margin-left: var(--marginLeftRigth);
 }
 
+#menu {
+    display: none;
+}
+
 #menuIdiomas {
     justify-content: center;
     display: inline-flex;
@@ -199,7 +203,7 @@ textarea {
 .boton {
     border-radius: 1.5em;
     font-family: Inter;
-    padding: 2.5vh;
+    padding: 24px;
     width: 50%;
     font-size: 16px;
     cursor: pointer;
@@ -225,7 +229,7 @@ textarea {
 }
 
 #resultado {
-    margin: var(--marginTop) var(--marginLeftRigth) var(--marginBottom);
+    margin: calc(4vw * 1.13);
     background-color: transparent;
     flex-direction: column;
     align-items: center;
@@ -335,7 +339,11 @@ footer section {
     header h1 {
         display: none;
     }
-
+    
+    #menu {
+        display: none;
+    }
+    
     #menuIdiomas {
         margin-right: calc(var(--marginTopBottom) * .8);
         margin-left: 0;
@@ -379,7 +387,6 @@ footer section {
     }
     
     .boton {
-        padding: 25px;
         width: 35%;
     }
     
@@ -389,6 +396,7 @@ footer section {
 
     #resultado {
         gap: 0;
+        margin: calc(4vw * 1.13);
     }
 
     #textoSalida {
@@ -401,7 +409,7 @@ footer section {
 
     #error {
         width: 100%;
-        margin: var(--marginLeftRigth);
+        margin: calc(4vw * 1.13);
     }
 
     #error img {
@@ -414,22 +422,19 @@ footer section {
     }
 }
 
-/* ADAPTAR PARA QUE SE PAREZCA AL DE FIGMA */
+
 /* Estilos para celulares */
-/*
 @media only screen and (max-width: 600px) {
     body {
-        align-items: center;
-        justify-content: space-between;
-        height: auto;
-        width: auto;
+        justify-content: flex-end;
+        width: 100%;
+        height: 100%;
     }
-    
+
     header {
-        width: auto;
-        margin-top: calc(var(--marginTopBottom) * 1.5);
-        margin-bottom: calc(var(--marginTopBottom) * .5);
-        margin-left: calc(var(--marginLeftRigth)* 2);
+        width: 100%;
+        margin: calc(var(--marginTopBottom) * 1.5) calc(var(--marginLeftRigth) * 5.5) 0;
+        justify-content: space-between;
     }
     
     header section {
@@ -445,29 +450,58 @@ footer section {
         display: none;
     }
 
+    #menu {
+        flex-direction: column;
+        align-items: flex-end;
+        position: relative;
+        display: flex;
+        width: 45px;
+        height: 34px;
+        gap: 8px;
+    }
+    
+    #menu span {
+        background-color: var(--darkBlue300);
+        border-radius: 8px;
+        width: 37px;
+        height: 6px;
+    }
+
+    /* Primera linea del menú flotante (dentro de '#menu span') */
+    #menu span:first-child {
+        width: 45px;
+    }
+    
+    /* Tercera linea del menú flotante (dentro de '#menu span') */
+    #menu span:nth-child(3) {
+        width: 29px;
+        transform-origin: top left;
+    }
+
     #menuIdiomas {
-        margin-right: calc(var(--marginTopBottom) * .8);
+        margin-right: calc((var(--marginLeftRigth) * 5.5) + (45px / 2));
         margin-left: 0;
         width: fit-content;
-        margin-top: calc(var(--marginTopBottom) * .8);
+        opacity: 0;
+        visibility: hidden;
     }
 
     #menuIdiomas nav {
-        padding: 1em;
+        padding: .5em;
     }
     
     #menuIdiomas nav section {
-        padding: .5em;
+        padding: .3em;
         flex-direction: row;
-        gap: .5em;
+        gap: .3em;
     }
 
     .idioma {
-        font-size: 14px;
+        font-size: 12px;
     }
 
     main {
-        margin: 0 calc(var(--marginLeftRigth) * 5.5) calc(var(--marginLeftRigth) * 2);
+        margin: 0 calc(var(--marginLeftRigth) * 2.13) calc(var(--marginLeftRigth) * 2);
         gap: var(--marginBottom);
         flex-direction: column;
         width: 100%;
@@ -476,6 +510,7 @@ footer section {
     #interacionUsuario {
         width: 100%;
         margin-bottom: 0;
+        gap: calc((var(--gap)) * 1.19);
     }
     
     #textoEntrada {
@@ -483,13 +518,14 @@ footer section {
     }
 
     #botones {
+        flex-direction: column;
+        align-items: center;
         justify-content: center;
-        gap: 5vw;
+        gap: calc(3vh * 1.19);
     }
     
     .boton {
-        padding: 25px;
-        width: 35%;
+        width: 100%;
     }
     
     #resultados {
@@ -497,20 +533,22 @@ footer section {
     }
 
     #resultado {
+        margin: calc(4vw * 1.13);
         gap: 0;
     }
 
     #textoSalida {
         max-height: 150px;
+        line-height: 1.5;
     }
 
     #botonCopiar {
-        width: 40%;
+        width: 100%;
     }
 
     #error {
         width: 100%;
-        margin: var(--marginLeftRigth);
+        margin: calc(4vw * 1.13);
     }
 
     #error img {
@@ -521,5 +559,9 @@ footer section {
         position: relative;
         padding: 2vh 0;
     }
+
+    footer section {
+        flex-direction: column;
+        gap: 1.5vh;
+    }
 }
-*/
